testsuite/tests/typecheck/should_fail/T9415.stderr

T9415.hs:3:1: error:
    • Superclass cycle for ‘C’
        whose superclasses include ‘D’
        whose superclasses include ‘C’
    • In the class declaration for ‘C’

T9415.hs:5:1: error:
    • Superclass cycle for ‘D’
        whose superclasses include ‘C’
        whose superclasses include ‘D’
    • In the class declaration for ‘D’
